Fixed bottom nav icons/alignment; added add games page

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -38,6 +38,8 @@ col {
 
 .fixed-bottom {
     height: 50px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 
